Rename package `response` to `presenter`
